--- a/styles.css
+++ b/styles.css
@@ -1,4 +1,5 @@
-html, body {
+html,
+body {
     margin: 0;
     padding: 0;
 }
@@ -11,122 +12,229 @@ body {
     text-align: center;
     /*font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;*/
     font-family: 'Thasadith', sans-serif;
-    font-size: 25px
+    font-size: 30px
 }
 
-#orarend h1, h2 {
+#orarend h1,
+h2 {
     padding: 0;
 }
 
 #orarend h1 {
-    margin: 5% 0 0;
+    margin: 2% 0 0;
     color: #fff;
 }
 
 #orarend h2 {
     color: #ddd;
 }
-table{
-    margin-left:auto; 
-    margin-right:auto;
+
+table {
+    margin-left: auto;
+    margin-right: auto;
     font-size: 20px;
     border-spacing: 0px;
-    
+
 }
-table, th, td {
+
+table,
+th,
+td {
     border: 0px solid rgba(0, 0, 0, 0);
-    text-align: center; 
+    text-align: center;
 }
-td{
+
+td {
     width: 200px;
 }
-tr{
+
+tr {
     height: 50px;
 }
-.ora{
-    width: 25px; 
+
+.ora {
+    width: 25px;
     background: rgba(56, 56, 56, 0.5);
 }
-tbody, thead {
+
+tbody,
+thead {
     color: white;
     display: table-row-group;
-    vertical-align: middle;    
+    vertical-align: middle;
 }
-th{
+
+th {
     background: rgba(56, 56, 56, 0.5);
 }
 
-.cbk{
+.cbk {
     /*#5F9825*/
-    background: rgb(95,152,37); /* Old browsers */
-    background: -moz-linear-gradient(-45deg, rgba(95,152,37,1) 0%, rgba(46,76,19,1) 100%); /* FF3.6-15 */
-    background: -webkit-linear-gradient(-45deg, rgba(95,152,37,1) 0%,rgba(46,76,19,1) 100%); /* Chrome10-25,Safari5.1-6 */
-    background: linear-gradient(135deg, rgba(95,152,37,1) 0%,rgba(46,76,19,1) 100%); /* W3C, IE10+, FF16+, Chrome26+, Opera12+, Safari7+ */
-    filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#5f9825', endColorstr='#2e4c13',GradientType=1 ); /* IE6-9 fallback on horizontal gradient */
+    background: rgb(95, 152, 37);
+    /* Old browsers */
+    background: -moz-linear-gradient(-45deg, rgba(95, 152, 37, 1) 0%, rgba(46, 76, 19, 1) 100%);
+    /* FF3.6-15 */
+    background: -webkit-linear-gradient(-45deg, rgba(95, 152, 37, 1) 0%, rgba(46, 76, 19, 1) 100%);
+    /* Chrome10-25,Safari5.1-6 */
+    background: linear-gradient(135deg, rgba(95, 152, 37, 1) 0%, rgba(46, 76, 19, 1) 100%);
+    /* W3C, IE10+, FF16+, Chrome26+, Opera12+, Safari7+ */
+    filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='#5f9825', endColorstr='#2e4c13', GradientType=1);
+    /* IE6-9 fallback on horizontal gradient */
 }
-.sma{
+
+.sma {
     /*background-color:#0098F8;*/
-    background: rgb(0,152,248); /* Old browsers */
-    background: -moz-linear-gradient(-45deg, rgba(0,152,248,1) 0%, rgba(0,91,147,1) 100%); /* FF3.6-15 */
-    background: -webkit-linear-gradient(-45deg, rgba(0,152,248,1) 0%,rgba(0,91,147,1) 100%); /* Chrome10-25,Safari5.1-6 */
-    background: linear-gradient(135deg, rgba(0,152,248,1) 0%,rgba(0,91,147,1) 100%); /* W3C, IE10+, FF16+, Chrome26+, Opera12+, Safari7+ */
-    filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#0098f8', endColorstr='#005b93',GradientType=1 ); /* IE6-9 fallback on horizontal gradient */
+    background: rgb(0, 152, 248);
+    /* Old browsers */
+    background: -moz-linear-gradient(-45deg, rgba(0, 152, 248, 1) 0%, rgba(0, 91, 147, 1) 100%);
+    /* FF3.6-15 */
+    background: -webkit-linear-gradient(-45deg, rgba(0, 152, 248, 1) 0%, rgba(0, 91, 147, 1) 100%);
+    /* Chrome10-25,Safari5.1-6 */
+    background: linear-gradient(135deg, rgba(0, 152, 248, 1) 0%, rgba(0, 91, 147, 1) 100%);
+    /* W3C, IE10+, FF16+, Chrome26+, Opera12+, Safari7+ */
+    filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='#0098f8', endColorstr='#005b93', GradientType=1);
+    /* IE6-9 fallback on horizontal gradient */
 }
-.pel{
+
+.pel {
     /*background-color:#8EFC94;*/
-    background: rgb(224,201,0); /* Old browsers */
-    background: -moz-linear-gradient(-45deg, rgba(224,201,0,1) 0%, rgba(112,85,23,1) 100%); /* FF3.6-15 */
-    background: -webkit-linear-gradient(-45deg, rgba(224,201,0,1) 0%,rgba(112,85,23,1) 100%); /* Chrome10-25,Safari5.1-6 */
-    background: linear-gradient(135deg, rgba(224,201,0,1) 0%,rgba(112,85,23,1) 100%); /* W3C, IE10+, FF16+, Chrome26+, Opera12+, Safari7+ */
-    filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#e0c900', endColorstr='#705517',GradientType=1 ); /* IE6-9 fallback on horizontal gradient */
+    background: rgb(224, 201, 0);
+    /* Old browsers */
+    background: -moz-linear-gradient(-45deg, rgba(224, 201, 0, 1) 0%, rgba(112, 85, 23, 1) 100%);
+    /* FF3.6-15 */
+    background: -webkit-linear-gradient(-45deg, rgba(224, 201, 0, 1) 0%, rgba(112, 85, 23, 1) 100%);
+    /* Chrome10-25,Safari5.1-6 */
+    background: linear-gradient(135deg, rgba(224, 201, 0, 1) 0%, rgba(112, 85, 23, 1) 100%);
+    /* W3C, IE10+, FF16+, Chrome26+, Opera12+, Safari7+ */
+    filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='#e0c900', endColorstr='#705517', GradientType=1);
+    /* IE6-9 fallback on horizontal gradient */
 }
-.smh{
+
+.smh {
     /*background-color:#0BC9FE;*/
-    background: rgb(12,226,255); /* Old browsers */
-    background: -moz-linear-gradient(-45deg, rgba(12,226,255,1) 0%, rgba(8,115,165,1) 100%); /* FF3.6-15 */
-    background: -webkit-linear-gradient(-45deg, rgba(12,226,255,1) 0%,rgba(8,115,165,1) 100%); /* Chrome10-25,Safari5.1-6 */
-    background: linear-gradient(135deg, rgba(12,226,255,1) 0%,rgba(8,115,165,1) 100%); /* W3C, IE10+, FF16+, Chrome26+, Opera12+, Safari7+ */
-    filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#0ce2ff', endColorstr='#0873a5',GradientType=1 ); /* IE6-9 fallback on horizontal gradient */
+    background: rgb(12, 226, 255);
+    /* Old browsers */
+    background: -moz-linear-gradient(-45deg, rgba(12, 226, 255, 1) 0%, rgba(8, 115, 165, 1) 100%);
+    /* FF3.6-15 */
+    background: -webkit-linear-gradient(-45deg, rgba(12, 226, 255, 1) 0%, rgba(8, 115, 165, 1) 100%);
+    /* Chrome10-25,Safari5.1-6 */
+    background: linear-gradient(135deg, rgba(12, 226, 255, 1) 0%, rgba(8, 115, 165, 1) 100%);
+    /* W3C, IE10+, FF16+, Chrome26+, Opera12+, Safari7+ */
+    filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='#0ce2ff', endColorstr='#0873a5', GradientType=1);
+    /* IE6-9 fallback on horizontal gradient */
 }
-.gye{
+
+.gye {
     /*background-color:#FF00FA;*/
-    background: rgb(255,0,250); /* Old browsers */
-    background: -moz-linear-gradient(-45deg, rgba(255,0,250,1) 0%, rgba(147,0,160,1) 100%); /* FF3.6-15 */
-    background: -webkit-linear-gradient(-45deg, rgba(255,0,250,1) 0%,rgba(147,0,160,1) 100%); /* Chrome10-25,Safari5.1-6 */
-    background: linear-gradient(135deg, rgba(255,0,250,1) 0%,rgba(147,0,160,1) 100%); /* W3C, IE10+, FF16+, Chrome26+, Opera12+, Safari7+ */
-    filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#ff00fa', endColorstr='#9300a0',GradientType=1 ); /* IE6-9 fallback on horizontal gradient */
-}
-.nji{
-    background:#2DFFC2;
-    background: -moz-linear-gradient(-45deg, #2DFFC2 0%, rgba(255,255,255,0.25) 100%); /* FF3.6-15 */
-    background: -webkit-linear-gradient(-45deg, #2DFFC2 0%,rgba(255,255,255,0.25) 100%); /* Chrome10-25,Safari5.1-6 */
-    background: linear-gradient(135deg, #2DFFC2 0%,rgba(255,255,255,0.25) 100%); /* W3C, IE10+, FF16+, Chrome26+, Opera12+, Safari7+ */
-    filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#2DFFC2', endColorstr='#40ffffff',GradientType=1 ); /* IE6-9 fallback on horizontal gradient */
+    background: rgb(255, 0, 250);
+    /* Old browsers */
+    background: -moz-linear-gradient(-45deg, rgba(255, 0, 250, 1) 0%, rgba(147, 0, 160, 1) 100%);
+    /* FF3.6-15 */
+    background: -webkit-linear-gradient(-45deg, rgba(255, 0, 250, 1) 0%, rgba(147, 0, 160, 1) 100%);
+    /* Chrome10-25,Safari5.1-6 */
+    background: linear-gradient(135deg, rgba(255, 0, 250, 1) 0%, rgba(147, 0, 160, 1) 100%);
+    /* W3C, IE10+, FF16+, Chrome26+, Opera12+, Safari7+ */
+    filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='#ff00fa', endColorstr='#9300a0', GradientType=1);
+    /* IE6-9 fallback on horizontal gradient */
 }
 
-
-
-.cbk:hover{
-    background:rgb(95,152,37);
-}
-.sma:hover{
-    background:rgb(0,152,248);
-}
-.pel:hover{
-    background:rgb(224,201,0);
-}
-.smh:hover{
-    background:rgb(12,226,255);
-}
-.gye:hover{
-    background:rgb(255,0,250);
-}
-.nji:hover{
-    background:#2DFFC2;
+.nji {
+    background: #2DFFC2;
+    background: -moz-linear-gradient(-45deg, #2DFFC2 0%, rgba(255, 255, 255, 0.25) 100%);
+    /* FF3.6-15 */
+    background: -webkit-linear-gradient(-45deg, #2DFFC2 0%, rgba(255, 255, 255, 0.25) 100%);
+    /* Chrome10-25,Safari5.1-6 */
+    background: linear-gradient(135deg, #2DFFC2 0%, rgba(255, 255, 255, 0.25) 100%);
+    /* W3C, IE10+, FF16+, Chrome26+, Opera12+, Safari7+ */
+    filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='#2DFFC2', endColorstr='#40ffffff', GradientType=1);
+    /* IE6-9 fallback on horizontal gradient */
 }
 
 
 
+.cbk:hover {
+    font-size: 0;
+}
+
+.cbk:hover:after {
+    content: attr(hover);
+    font-size: 20px;
+}
+
+.sma:hover {
+    font-size: 0;
+}
+
+.sma:hover:after {
+    content: attr(hover);
+    font-size: 20px;
+}
+
+.pel:hover {
+    font-size: 0;
+}
+
+.pel:hover:after {
+    content: attr(hover);
+    font-size: 20px;
+}
+
+.smh:hover {
+    font-size: 0;
+}
+
+.smh:hover:after {
+    content: attr(hover);
+    font-size: 20px;
+}
+
+.gye:hover {
+    font-size: 0;
+}
+
+.gye:hover:after {
+    content: attr(hover);
+    font-size: 20px;
+}
+
+.nji:hover {
+    font-size: 0;
+}
+
+.nji:hover:after {
+    content: attr(hover);
+    font-size: 20px;
+}
 
 
 
+.footer {
+    width: 100%;
+    height: 75px;
+    float: left;
+    font-family: 'Thasadith', sans-serif;
+    margin: 200px auto 0;
+    position: fixed;
+    left: 0;
+    bottom: 0;
+    width: 100%;
+    text-align: center;
+
+}
+
+.footer p {
+    width: 92%;
+    margin: 10px auto;
+    color: white;
+    text-align: center;
+    font-size: 20px;
+    font-weight: 700;
+}
+
+.footer img {
+    width: 200px;
+    vertical-align: middle;
+    margin: 0px 25px;
+    -webkit-filter: drop-shadow(1px 1px 0 grey) drop-shadow(-1px -1px 0 grey);
+    filter: drop-shadow(1px 1px 0 grey) drop-shadow(-1px -1px 0 grey);
+}
